--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollup-plugin-auto-external",
+  "name": "@liangchunn/rollup-plugin-auto-external",
   "version": "3.0.0-alpha.0",
   "description": "Rollup plugin to automatically exclude package.json dependencies and peerDependencies from your bundle",
   "main": "index.js",
@@ -38,7 +38,6 @@
   "dependencies": {
     "builtins": "^2.0.0",
     "read-pkg": "^3.0.0",
-    "safe-resolve": "^1.0.0",
     "semver": "^5.6.0"
   },
   "files": [
